<resources>
    <string name="app_name">LaCasaDelBijao</string>
    <string name="action_settings">Settings</string>
    <string name="et_usuario" />
    <string name="et_contra" />
    <string name="btn_ingresar">INGRESAR</string>
    <string name="title_activity_mesas">Mesas</string>
    <string name="btn_mesa1">1</string>
    <string name="btn_mesa2">2</string>
    <string name="btn_mesa3">3</string>
    <string name="btn_mesa4">4</string>
    <string name="btn_mesa5">5</string>
    <string name="btn_mesa6">6</string>
    <string name="title_activity_opciones">Opciones</string>
    <string name="title_activity_platos">Platos</string>
    <string name="btn_bebidas">Bebidas</string>
    <string name="btn_guarniciones">Guarniciones</string>
    <string name="btn_mesa7">7</string>
    <string name="btn_mesa8">8</string>
    <string name="btn_mesa9">9</string>
    <string name="btn_mesa10">10</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_pedido">activity_pedido</string>
    <string name="tv_nombrePlato" />
    <string name="tv_descripcionPlato" />
    <string name="tv_precio" />
    <string name="title_activity_listado_platos">listado_platos</string>
    <string name="title_activity_disponibilidad">disponibilidad</string>
    <string name="btn_listaplatos">Lista de platos</string>
</resources>
