<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FONDOCB"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ariad.lacasadelbijao.controladores.Opciones"
    tools:showIn="@layout/activity_opciones">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:srcCompat="@drawable/logopeque" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/textView4"
                    android:textSize="16dp"
                    android:text="Costo del pedido:  "/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textSize="16dp"
                    android:text="00.00" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_platos"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="Carta"
                android:textAlignment="center"
                android:textSize="40dp" />

            <Button
                android:id="@id/btn_listaplatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/formatoboton"
                android:text="@string/btn_listaplatos" />

            <Button
                android:id="@id/btn_bebidas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_listaplatos"
                android:layout_marginTop="11dp"
                android:background="@drawable/formatoboton"
                android:text="@string/btn_bebidas" />

            <Button
                android:id="@id/btn_guarniciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_bebidas"
                android:layout_marginTop="11dp"
                android:background="@drawable/formatoboton"
                android:text="@string/btn_guarniciones" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_guarniciones"
                android:layout_marginTop="11dp"
                android:background="@drawable/formatoboton"
                android:text="Otros" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@id/btn_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_green_dark"
        app:srcCompat="@drawable/logopedido" />
</RelativeLayout>